fjord-compiler/test/errors/Linearity.fj
module errors.Linearity

record Message
  content : String


frugal : Message -* (Message, Message)
frugal m =
  (m, m)

